Fixed oversized title on mobile view

--- a/css/style.sass
+++ b/css/style.sass
@@ -183,6 +183,11 @@ a
         img
             margin: 0 auto
 @media (max-width: 500px)
+    h1
+        margin-top: 100px
+        font-size: 3.5em
+    h3
+        font-size: 2em
     .row,.row2
         img
             width: 80vw !important
